--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -38,11 +38,11 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
             app:dampingRatio="0.5"
-            app:dotsColor="@color/gradient_purple"
+            app:dotsColor="@color/Gray_600"
             app:dotsCornerRadius="8dp"
             app:dotsSize="16dp"
             app:dotsSpacing="6dp"
-            app:dotsStrokeColor="@color/gradient_purple"
+            app:dotsStrokeColor="@color/Gray_500"
             app:dotsStrokeWidth="2dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
