--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -30,14 +30,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            style="@style/Headline"
             app:layout_constraintBottom_toBottomOf="@id/iv_mainpage_profil"
             app:layout_constraintStart_toEndOf="@id/iv_mainpage_profil"
             app:layout_constraintTop_toTopOf="@id/iv_mainpage_profil"
             tools:text="이준희" />
 
         <TextView
+            style="@style/Caption1"
             android:id="@+id/tv_mainpage_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:text="@string/mainpage_id"
-            android:textSize="25sp"
+            style="@style/Headline"
             app:layout_constraintStart_toStartOf="@id/iv_mainpage_profil"
             app:layout_constraintTop_toBottomOf="@id/iv_mainpage_profil" />
 
@@ -66,7 +66,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:textColor="@color/grey_04"
+            style="@style/Body_B2"
             app:layout_constraintStart_toStartOf="@id/tv_mainpage_id_title"
             app:layout_constraintTop_toBottomOf="@id/tv_mainpage_id_title"
             tools:text="alkfmd" />
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:text="@string/mainpage_mbti"
-            android:textSize="25sp"
+            style="@style/Headline"
             app:layout_constraintStart_toStartOf="@id/tv_mainpage_id"
             app:layout_constraintTop_toBottomOf="@id/tv_mainpage_id" />
 
@@ -86,7 +86,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:textColor="@color/grey_04"
+            style="@style/Body_B2"
             app:layout_constraintStart_toStartOf="@id/tv_mainpage_mbti_title"
             app:layout_constraintTop_toBottomOf="@id/tv_mainpage_mbti_title"
             tools:text="alkfmd" />
@@ -98,7 +98,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:text="@string/mainpage_logout"
-            android:textColor="@color/grey_05"
+            style="@style/Caption1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_mainpage_mbti" />
 
