--- a/app/src/main/res/layout/item_home_myproile.xml
+++ b/app/src/main/res/layout/item_home_myproile.xml
@@ -21,11 +21,10 @@
 
     <TextView
         android:id="@+id/tv_home_myname"
+        style="@style/Headline"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textSize="20sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_home_myprofile"
         app:layout_constraintStart_toEndOf="@id/iv_home_myprofile"
         app:layout_constraintTop_toTopOf="@id/iv_home_myprofile"
@@ -33,6 +32,7 @@
 
     <TextView
         android:id="@+id/tv_home_state_message"
+        style="@style/Caption1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
