--- a/app/src/main/res/layout/no_body_action2_dialog.xml
+++ b/app/src/main/res/layout/no_body_action2_dialog.xml
@@ -16,31 +16,31 @@
 
         <TextView
             android:id="@+id/dialog_title"
+            style="@style/Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginTop="25dp"
-            android:textColor="@color/grey_01"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="TITLE" />
 
         <TextView
             android:id="@+id/btn_left"
+            style="@style/Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="16dp"
             android:paddingHorizontal="14dp"
             android:paddingVertical="7dp"
-            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_right"
             tools:text="취소" />
 
         <TextView
             android:id="@+id/btn_right"
+            style="@style/Subtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -48,7 +48,6 @@
             android:layout_marginBottom="16dp"
             android:paddingHorizontal="14dp"
             android:paddingVertical="7dp"
-            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/btn_left"
