--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,12 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Base.Theme.DoSoptTemplate" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    <style name="Base.Theme.DoSoptTemplate" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/Gray_50</item>
+        <item name="android:windowLightStatusBar">true</item>
+        <!-- Customize your theme here. -->
+        <item name="android:includeFontPadding">false</item>
     </style>
+
 
     <style name="Theme.DoSoptTemplate" parent="Base.Theme.DoSoptTemplate" />
 </resources>
