--- a/app/src/main/res/layout/item_follower.xml
+++ b/app/src/main/res/layout/item_follower.xml
@@ -2,42 +2,43 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tool="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/iv_user"
-        android:layout_width="100dp"
+        android:id="@+id/iv_follower"
+        android:layout_width="150dp"
         android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tool:src="@drawable/img_dog" />
 
     <TextView
-        android:id="@+id/tv_username"
+        android:id="@+id/tv_follower_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/iv_user"
-        app:layout_constraintStart_toEndOf="@id/iv_user"
-        app:layout_constraintTop_toTopOf="@id/iv_user"
+        app:layout_constraintBottom_toBottomOf="@id/iv_follower"
+        app:layout_constraintStart_toEndOf="@id/iv_follower"
+        app:layout_constraintTop_toTopOf="@id/iv_follower"
         tool:text="강아지" />
 
     <TextView
-        android:id="@+id/tv_useremail"
+        android:id="@+id/tv_follower_mail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:textSize="10sp"
-        app:layout_constraintStart_toStartOf="@id/tv_username"
-        app:layout_constraintTop_toBottomOf="@id/tv_username"
-        tool:text="dlalfafadf@naver.com"
-        tool:ignore="SmallSp" />
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="@id/tv_follower_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_follower_name"
+        tool:ignore="SmallSp"
+        tool:text="dlalfafadf@naver.com" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
