--- a/app/src/main/res/xml/activity_splash_scene.xml
+++ b/app/src/main/res/xml/activity_splash_scene.xml
@@ -3,32 +3,45 @@
     xmlns:motion="http://schemas.android.com/apk/res-auto">
 
     <Transition
-        motion:constraintSetStart="@id/start"
+        motion:autoTransition="animateToEnd"
         motion:constraintSetEnd="@id/end"
-        motion:duration="1500"
-        motion:motionInterpolator="easeOut">
-
-        <KeyFrameSet>
-            <KeyAttribute
-                android:alpha="1"
-                android:translationY="-100dp"
-                motion:framePosition="50"
-                motion:motionTarget="@+id/iv_splash" />
-
-            <KeyAttribute
-                android:alpha="1"
-                android:translationY="0dp"
-                motion:framePosition="100" />
-
-        </KeyFrameSet>
+        motion:constraintSetStart="@id/start"
+        motion:duration="1500">
+        <KeyFrameSet></KeyFrameSet>
     </Transition>
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@+id/iv_splash"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:id="@id/layout_background"
+            android:layout_width="200dp"
+            android:layout_height="0dp"
+            android:scaleX="10"
+            android:scaleY="10"
             motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintDimensionRatio="1"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
+        <Constraint
+            android:id="@id/iv_splash_green"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            android:alpha="0"
+            android:scaleX="0"
+            android:scaleY="0"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintDimensionRatio="1"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
+        <Constraint
+            android:id="@id/iv_splash_black"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            android:scaleX="1"
+            android:scaleY="1"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintDimensionRatio="1"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
@@ -36,10 +49,37 @@
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@+id/iv_splash"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:id="@id/layout_background"
+            android:layout_width="200dp"
+            android:layout_height="0dp"
+            android:scaleX="0"
+            android:scaleY="0"
             motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintDimensionRatio="1"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent" />
+        <Constraint
+            android:id="@id/iv_splash_green"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            android:alpha="1"
+            android:scaleX="1"
+            android:scaleY="1"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintDimensionRatio="1"
+            motion:layout_constraintEnd_toEndOf="parent"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintTop_toTopOf="parent"
+            motion:transitionEasing="cubic(1,0,1,0)" />
+        <Constraint
+            android:id="@id/iv_splash_black"
+            android:layout_width="150dp"
+            android:layout_height="0dp"
+            android:scaleX="0"
+            android:scaleY="0"
+            motion:layout_constraintBottom_toBottomOf="parent"
+            motion:layout_constraintDimensionRatio="1"
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
