--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,19 +7,19 @@
         <item name="android:includeFontPadding">false</item>
     </style>
 
-    <style name="Splash" parent="Theme.Material3.Light.NoActionBar">
-        <!-- 상태바 컬러 -->
-        <item name="android:statusBarColor">@color/Gray_600</item>
+    <!--splash-->
+    <style name="Theme.DoSopt.Splash" parent="Theme.SplashScreen">
         <!-- 타이틀바 제거 -->
         <item name="android:windowNoTitle">true</item>
         <!-- 액션바 제거 -->
         <item name="android:windowActionBar">false</item>
         <!-- 앱이 켜질 때 미리보기 제거 -->
         <item name="android:windowDisablePreview">true</item>
+        <!-- 배경색 투명 -->
+        <item name="windowSplashScreenAnimatedIcon">@android:color/transparent</item>
+        <!-- 스플래시 이후 Theme -->
+        <item name="postSplashScreenTheme">@style/Base.Theme.DoSoptTemplate</item>
     </style>
-
-
-
 
     <style name="Theme.DoSoptTemplate" parent="Base.Theme.DoSoptTemplate" />
 </resources>
